--- a/_config.yml
+++ b/_config.yml
@@ -3,31 +3,28 @@
 # This config file contains the config of your webpages
 # You may also want to update /config/webpack.pwa.js in case you want to generate a Progressive Web App
 
-title: Mobile App Landing Page Template
-email: contact@sandoche.com
-description: Free to use static landing page template to showcase your mobile app
+title: Mobile Apps
+email: saffet57siraz@gmail.com
+description: Mobile Games Showcase
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mobileapplandingpage.learn.uno" # the base hostname & protocol for your site, e.g. http://example.com
 theme_color: '#efeeff'
 twitter_username: sandochee
 github_username:  sandoche
-author: Sandoche Adittane
+author: Saffet Şiraz
 logo: assets/images/large-logo.png
 twitter:
   username: sandochee
 social:
-  name: Sandoche Adittane
+  name: Saffet Şiraz
   links:
-    - https://twitter.com/sandochee
-    - https://www.facebook.com/sandoche
-    - https://www.linkedin.com/in/sandoche
-    - https://plus.google.com/+SandocheADITTANE
+    - https://www.linkedin.com/in/saffet-%C5%9Firaz/
     - https://github.com/sandoche
 
 languages: ["en"]
 ampdir: amp
 
-github: https://github.com/sandoche/Mobile-app-landingpage-template
+github:
 
 ### Google webmaster tools, Google Analytics, Doorbell and Cookie consent uncomment and put the API key
 #webmaster_verifications:
