--- a/_config.yml
+++ b/_config.yml
@@ -62,9 +62,9 @@ features                                  :
     description                           : #Display a smart app banner on iOS devices.
     fontawesome_icon_name                 : #arrow-alt-circle-down
 
-  - title                                 : #Social Links
-    description                           : ##Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : #link
+  - title                                 : Social Links
+    description                           : Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
+    fontawesome_icon_name                 : link
 
   - title                                 : # New Feature Title
     description                           : # New Feature Description
